fix(fe): resolve filter popup z-index issue and adjust styles

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -52,7 +52,7 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 1000;
 }
 
 .header-brand h1 +
@@ -678,6 +678,7 @@ input:checked + .slider:before {
     text-transform: uppercase;
     letter-spacing: 0.025em;
     margin-left: auto;
+    text-wrap: nowrap;
 }
 
 .status-receive, .status-low-stock {
@@ -1807,6 +1808,9 @@ input:checked + .slider:before {
         }
     }
     
+    @media (width: 1024px) {
+      
+    }
 
     /* Large Desktop */
     @media (min-width: 1025px) and (max-width: 1599px) {
@@ -3281,7 +3285,7 @@ body.tab-done .add-order-btn {
     padding: 20px;
     min-width: 300px;
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
-    z-index: 1000;
+    z-index: 100;
     display: none;
     margin-top: 8px;
     overflow-y: auto;
@@ -4626,7 +4630,7 @@ body[data-page="login"] {
 .stat-card {
     background: white;
     border-radius: 10px;
-    border: 1px solid #DCD0A8;
+    border: 1px solid #CAB99D;
     padding: 1.5rem;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     display: flex;
